# bencode

./: .buildinfo  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  vcpkg.json
.doctrees/: environment.pickle  index.doctree
.doctrees/getting_started/: bencode_format.doctree  integration.doctree  introduction.doctree  performance.doctree
.doctrees/other/: license.doctree  references.doctree
.doctrees/reference/: bvalue.doctree  bview.doctree  consumers.doctree  descriptor_and_descriptor_table.doctree  encoding_and_decoding.doctree
.doctrees/usage/: customization_points.doctree  descriptor.doctree  encoding_decoding.doctree  events.doctree  trait_headers.doctree  value.doctree  value_and_view.doctree  view.doctree
.github/workflows/: cpp.yml  docs.yml  sanitizers.yml  tests-linux.yml  tests-windows.yml  tests.yml
_sources/: index.rst.txt
_sources/getting_started/: integration.rst.txt  introduction.rst.txt
_sources/other/: references.rst.txt
_sources/reference/: bvalue.rst.txt  bview.rst.txt  descriptor_and_descriptor_table.rst.txt
_sources/usage/: customization_points.rst.txt  descriptor.rst.txt  encoding_decoding.rst.txt  events.rst.txt  trait_headers.rst.txt  value.rst.txt  value_and_view.rst.txt  view.rst.txt
benchmark/: CMakeLists.txt  benchmark_barplot.ipynb  main.cpp  test_push_parser.cpp
benchmark/comparison/: CMakeLists.txt  aetf_qbencode.cpp  arvidn_libtorrent.cpp  fbdtemme_bencode.cpp  irajul_bencode.cpp  jimporter_bencode.cpp  jimporter_bencode_boost.cpp  kriben_bencode.cpp  main.cpp  outputenable_bencode.cpp  rakshasa_libtorrent.cpp  s3ponia_bencodeparser.cpp  s3rvac_cpp_bencoding.cpp  theanti9_cppbencode.cpp
benchmark/from_chars/: CMakeLists.txt  benchmark.cpp
benchmark/plots/: benchmark-aetf-qbencode.json  benchmark-arvidn-libtorrent.json  benchmark-fbdtemme-bencode-avx2.json  benchmark-fbdtemme-bencode-serial.json  benchmark-fbdtemme-bencode-swar.json  benchmark-fbdtemme-bencode.json  benchmark-irajul-bencode.json  benchmark-jimporter-bencode-boost.json  benchmark-jimporter-bencode.json  benchmark-kriben-bencode.json  benchmark-outputenable-bencode.json  benchmark-rakshasa-libtorrent.json  benchmark-s3ponia-bencodeparser.json  benchmark-s3rvac-cpp-bencoding.json  benchmark-theanti9-cppbencode.json  benchmark_barplot.ipynb  comparison-benchmark.ipynb  comparison_benchmark_plots.ipynb  run_benchmarks.sh  utils.py
cmake/: FindSphinx.cmake  bencode-config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
docs/getting_started/: bencode_format.rst  integration.rst  introduction.rst  performance.rst
docs/other/: license.rst
docs/reference/: bvalue.rst  bview.rst
docs/usage/: customization_points.rst  encoding_decoding.rst  events.rst  value.rst  value_and_view.rst  view.rst
getting_started/: bencode_format.html  integration.html  introduction.html  performance.html
include/bencode/: bencode.hpp  bencode_fwd.hpp  bvalue.hpp  bview.hpp
include/bencode/detail/: bad_access.hpp  bad_conversion.hpp  bencode_type.hpp  bpointer.hpp  compat.hpp  concepts.hpp  conversion_error.hpp  decode_value.hpp  decode_view.hpp  descriptor.hpp  descriptor_table.hpp  encode.hpp  encoder.hpp  encoding_error.hpp  encoding_ostream.hpp  event_connector.hpp  exception.hpp  exceptions.hpp  itoa.hpp  out_of_range.hpp  safe_int.hpp  serialization_traits.hpp  symbol.hpp  utils.hpp
include/bencode/detail/bvalue/: accessors.hpp  assignment.hpp  basic_bvalue.hpp  bvalue_policy.hpp  comparison.hpp  concepts.hpp  conversion.hpp  events.hpp  exceptions.hpp  pointer.hpp  to_bvalue.hpp
include/bencode/detail/bview/: accessors.hpp  bview.hpp  bview_generic_access_impl.hpp  comparison.hpp  concepts.hpp  conversion.hpp  dict_bview.hpp  events.hpp  exceptions.hpp  integer_bview.hpp  list_bview.hpp  pointer.hpp  string_bview.hpp  to_bvalue.hpp
include/bencode/detail/events/: concepts.hpp  consumers.hpp  debug_to.hpp  encode_json_to.hpp  encode_to.hpp  events.hpp  format_json_to.hpp  to_bvalue.hpp
include/bencode/detail/events/consumer/: debug_to.hpp  encode_to.hpp  format_json_to.hpp
include/bencode/detail/experiments/: common_avx2.hpp  simd.hpp  simd_operations.hpp  tables.hpp
include/bencode/detail/experiments/simd/: block_reader.hpp  simd_parser.hpp  token_indexer.hpp
include/bencode/detail/parser/: base_parser.hpp  common.hpp  descriptor_parser.hpp  error.hpp  from_chars.hpp  from_iters.hpp  helpers.hpp  parser_options.hpp  parsing_error.hpp  push_parser.hpp
include/bencode/detail/parser/implementation/: from_chars_avx2.hpp  from_chars_serial.hpp  from_chars_sse41.hpp  from_chars_swar.hpp
include/bencode/events/: format_json_to.hpp
include/bencode/traits/: all.hpp  array.hpp  fundamentals.hpp  map.hpp  unordered_map.hpp
other/: license.html  references.html
reference/: bvalue.html  bview.html  consumers.html  descriptor_and_descriptor_table.html  encoding_and_decoding.html
tests/: CMakeLists.txt  main.cpp  test_bencode_type.cpp  test_bpointer.cpp  test_concepts.cpp  test_connect.cpp  test_decode.cpp  test_encode.cpp  test_encoder.cpp  test_factory_methods.cpp  test_itoa.cpp  test_stream_encoder.cpp  test_traits.cpp  test_type.cpp  test_type_traits.cpp
tests/basic_bvalue/: test_accessors.cpp  test_basic_bvalue.cpp  test_comparison.cpp  test_constructor.cpp  test_conversion.cpp  test_events.cpp
tests/bview/: data.hpp  test_accessors.cpp  test_bview.cpp  test_comparison.cpp  test_conversion.cpp  test_dict_bview.cpp  test_integer_bview.cpp  test_list_bview.cpp  test_string_bview.cpp
tests/cmake_import/: CMakeLists.txt
tests/parser/: data.hpp  descriptor_parser.cpp  push_parser.cpp  test_common.cpp  test_from_chars.cpp  test_from_iters.cpp  test_simd.cpp  test_simd_operations.cpp
tests/traits/: memory.cpp  span.cpp
usage/: customization_points.html  descriptor.html  encoding_decoding.html  events.html  trait_headers.html  value.html  value_and_view.html  view.html
